@@ -925,10 +925,10 @@ static void account_clone(GtkWidget *widget, gpointer data)
 	ACP_FASSIGN(msg_leave_time);
 	ACP_FASSIGN(recv_at_getall);
 	ACP_FASSIGN(sd_rmmail_on_download);
-	ACP_FASSIGN(sd_filter_on_recv);
 	ACP_FASSIGN(enable_size_limit);
 	ACP_FASSIGN(size_limit);
 	ACP_FASSIGN(filter_on_recv);
+	ACP_FASSIGN(filterhook_on_recv);
 	ACP_FDUP(inbox);
 	ACP_FASSIGN(max_articles);
 
